# bevy_mod_postgrest

./: Cargo.toml  LICENSE-MIT  README.md  flake.nix
.github/workflows/: build-and-test.yml
bevy_mod_postgrest/: Cargo.toml
bevy_mod_postgrest/src/: lib.rs
examples/: Cargo.toml
examples/src/: basic.rs  load_component.rs  load_resource.rs  main.rs  todo.rs
nix/: bevy.nix  crate.nix
nix/test/: default.nix  init_db.sql  rust.nix
src/: lib.rs
tests/: dummy.rs
