[package]
name = "bevy_mod_postgrest"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.0"
postgrest = "1.6.0"
serde_json = "1.0.114"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
