[workspace]
resolver = "2"
members = [
  "bevy_mod_postgrest",
  "examples",
]

[workspace.dependencies]
anyhow = "1.0.80"
async-compat = "0.2.3"
bevy = "0.13.0"
bevy_eventlistener = "0.7.0"
crossbeam = "0.8.4"
postgrest = "1.6.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

bevy_mod_postgrest = { path = "bevy_mod_postgrest" }
